--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,22 @@
     "name": "listadeseries-",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon core/server.ts",
+        "start": "nodemon server.ts",
         "build": "npx tsc"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@typegoose/typegoose": "^9.12.1",
         "express": "^4.18.2",
+        "mongoose": "^6.6.5",
+        "pg": "^8.8.0",
         "ts-node": "^10.9.1",
+        "typeorm": "^0.3.10",
         "typescript": "^4.8.4"
     },
     "devDependencies": {
