--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "@typegoose/typegoose": "^9.12.1",
+        "connect-typeorm": "^2.0.0",
         "express": "^4.18.2",
         "mongoose": "^6.6.5",
         "pg": "^8.8.0",
