--- a/server/package.json
+++ b/server/package.json
@@ -1,28 +1,27 @@
 {
-    "name": "listadeseries-",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.ts",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon server.ts",
-        "build": "npx tsc"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@typegoose/typegoose": "^9.12.1",
-        "connect-typeorm": "^2.0.0",
-        "express": "^4.18.2",
-        "mongoose": "^6.6.5",
-        "pg": "^8.8.0",
-        "ts-node": "^10.9.1",
-        "typeorm": "^0.3.10",
+    "name": "server",
+    "version": "0.0.1",
+    "description": "Awesome project developed with TypeORM.",
+    "type": "commonjs",
+    "devDependencies": {
+        "@types/node": "^16.11.10",
+        "ts-node": "10.7.0",
         "typescript": "^4.8.4"
     },
-    "devDependencies": {
-        "@types/express": "^4.17.14",
-        "@types/node": "^18.11.0"
+    "dependencies": {
+        "class-validator": "^0.13.2",
+        "connect-typeorm": "^2.0.0",
+        "express": "^4.18.2",
+        "pg": "^8.4.0",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "0.3.10"
+    },
+    "scripts": {
+        "start": "ts-node src/index.ts",
+        "typeorm": "npx typeorm-ts-node-esm",
+        "migration:create": "npm run typeorm migration:create",
+        "migration:generate": "npm run  typeorm migration:generate -d ormconfig.ts",
+        "migration:run": "npm run typeorm migration:run -d ormconfig.ts",
+        "migration:drop": " npm  run typeorm schema:drop -d ormconfig.ts"
     }
 }
