--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,6 @@
     "dependencies": {
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
-        "@material-ui/pickers": "^3.3.10",
         "@mui/material": "^5.10.9",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -17,6 +16,7 @@
         "axios": "^1.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.38.0",
         "react-router-dom": "^6.4.2",
         "react-scripts": "^2.1.3",
         "typescript": "^4.8.4",
