--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "description": "Awesome project developed with TypeORM.",
     "type": "commonjs",
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/node": "^16.11.10",
         "ts-node": "10.7.0",
         "typescript": "^4.8.4"
@@ -11,13 +12,15 @@
     "dependencies": {
         "class-validator": "^0.13.2",
         "connect-typeorm": "^2.0.0",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
+        "nodemon": "^2.0.20",
         "pg": "^8.4.0",
         "reflect-metadata": "^0.1.13",
         "typeorm": "0.3.10"
     },
     "scripts": {
-        "start": "ts-node src/index.ts",
+        "start": "nodemon src/index.ts",
         "typeorm": "npx typeorm-ts-node-esm",
         "migration:create": "npm run typeorm migration:create",
         "migration:generate": "npm run  typeorm migration:generate -d ormconfig.ts",
